--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "config": {
     "org.pinf.genesis.lib/0": {
       "api": {
+        "provides": {
+          "commands": "./api/commands.js"
+        },
         "consumes": {
           "config": "org.pinf.genesis.lib/0/config"
         }
